# nudny-window

./: .bazelrc  .clang-tidy  .gitignore  BUILD  CMakeLists.txt  MODULE.bazel  README.md  bazel-nudny-baseline
include/nudny/: window.hpp
include/nudny/window/: sfml.hpp
scripts/: build.sh  coverage.sh  tidy.sh
src/: main.cpp  window.cpp
test/: CMakeLists.txt
