bazel_dep(name="googletest", version="1.17.0")
bazel_dep(name="rules_cc", version="0.2.17")
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "abb61a688167623088f8768cc9264798df6a9d10",
)
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_python", version = "2.2.0-rc0")
bazel_dep(name = "nlohmann_json", version = "3.12.0")
